--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -485,7 +485,6 @@
     <Content Include="Views\KeToan\ThemCongno.cshtml" />
     <Content Include="Views\KeToan\TrangChuKeToan.cshtml" />
     <Content Include="Views\KeToan\XoaCN.cshtml" />
-    <Content Include="Views\KeToan\XoaHD.cshtml" />
     <Content Include="Views\KeToan\XuatHDBH.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -591,6 +590,7 @@
     <Content Include="Views\KeToan\XuatCN.cshtml" />
     <Content Include="Views\KeToan\QLDonNo.cshtml" />
     <Content Include="Views\KeToan\QLDonThanhToan.cshtml" />
+    <Content Include="Views\KeToan\DSCongnoDL.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
