--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Models\BienBangKiemKe.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\ChiTietBienBang.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -589,9 +590,13 @@
     <Content Include="Views\KinhDoanh\TuChoiTruyCap.cshtml" />
     <Content Include="Views\TuChoiTruyCap\Layout\Error.cshtml" />
     <Content Include="Views\TuChoiTruyCap\TuChoiTruyCap.cshtml" />
+    <Content Include="Views\KhachHang\ChiTietSP.cshtml" />
+    <Content Include="Views\KhachHang\GioHangDL.cshtml" />
+    <Content Include="Views\KhachHang\PageDatHang.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Data\ImagesKhachHang\" />
     <Folder Include="Data\Images\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Test01\Layout\" />
