--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -591,7 +591,7 @@
     <Content Include="Views\KinhDoanh\TuChoiTruyCap.cshtml" />
     <Content Include="Views\TuChoiTruyCap\Layout\Error.cshtml" />
     <Content Include="Views\TuChoiTruyCap\TuChoiTruyCap.cshtml" />
-    <Content Include="Views\PhongKho\CreatePNX.cshtml" />
+    <Content Include="Views\PhongKho\CreatePXuat.cshtml" />
     <Content Include="Views\PhieuNhapXuats\Delete.cshtml" />
     <Content Include="Views\PhieuNhapXuats\Details.cshtml" />
     <Content Include="Views\PhieuNhapXuats\Edit.cshtml" />
