--- a/Test02/packages.config
+++ b/Test02/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="bootstrap" version="3.4.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EPPlus" version="6.1.3" targetFramework="net46" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net46" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net46" />
   <package id="jQuery" version="3.4.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net46" />
