--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -220,6 +220,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\DemoPX\DemoPXController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-5.0.2-dist\css\bootstrap-grid.css" />
@@ -290,15 +291,15 @@
     <Content Include="Content\Img\account.png" />
     <Content Include="Content\Img\DiemKhang.jpg" />
     <Content Include="Content\Img\KhoHang\bg_createStorage.jpg" />
-    <Content Include="Content\Img\SanPham\7up.jpg" />
-    <Content Include="Content\Img\SanPham\coca.png" />
-    <Content Include="Content\Img\SanPham\cocalight.jpg" />
-    <Content Include="Content\Img\SanPham\pepsi.jpg" />
-    <Content Include="Content\Img\SanPham\pepsi0calo.jpg" />
-    <Content Include="Content\Img\SanPham\sting.jpg" />
-    <Content Include="Content\Img\SanPham\stingVang.jpg" />
+    <Content Include="Data\Images\7up.jpg" />
+    <Content Include="Data\Images\coca.png" />
+    <Content Include="Data\Images\cocalight.jpg" />
+    <Content Include="Data\Images\pepsi.jpg" />
+    <Content Include="Data\Images\pepsi0calo.jpg" />
+    <Content Include="Data\Images\sting.jpg" />
+    <Content Include="Data\Images\stingVang.jpg" />
     <Content Include="Content\images\teamwork-la-gi-3.jpg" />
-    <Content Include="Content\Img\SanPham\traolong.png" />
+    <Content Include="Data\Images\traolong.png" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\jquery-3.2.1.min.js" />
     <Content Include="Content\js\main.js" />
@@ -473,6 +474,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Views\DemoPX\jquery.min.js" />
+    <Content Include="Views\DemoPX\style.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -596,10 +599,14 @@
     <Content Include="Views\PhieuNhapXuats\Details.cshtml" />
     <Content Include="Views\PhieuNhapXuats\Edit.cshtml" />
     <Content Include="Views\PhieuNhapXuats\Index.cshtml" />
+    <Content Include="Views\DemoPX\DemoPX.cshtml" />
+    <Content Include="Views\PhongKho\ChiTietDonHang.cshtml" />
+    <Content Include="Views\PhongKho\DetailsPXK.cshtml" />
+    <Content Include="Views\PhongKho\DeletePNX.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Data\Images\" />
+    <Folder Include="Content\Img\SanPham\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Test01\Layout\" />
   </ItemGroup>
