--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -164,6 +164,9 @@
     <Compile Include="Models\ChiTietKho.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChiTietPhieuNhapXuat.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ChucVu.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -213,12 +216,6 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SanPham.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\sp_helpdiagrams_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -291,6 +288,7 @@
     <Content Include="Content\Img\135017829_1026004181228801_2637032699560275_n.jpg" />
     <Content Include="Content\Img\account.png" />
     <Content Include="Content\Img\DiemKhang.jpg" />
+    <Content Include="Content\Img\neo.jpg" />
     <Content Include="Content\Img\SanPham\7up.jpg" />
     <Content Include="Content\Img\SanPham\coca.png" />
     <Content Include="Content\Img\SanPham\cocalight.jpg" />
@@ -497,11 +495,6 @@
     <Content Include="Views\KinhDoanh\QuanLyDH.cshtml" />
     <Content Include="Views\KinhDoanh\QuanLyHD.cshtml" />
     <Content Include="Views\KinhDoanh\QuanLySP.cshtml" />
-    <Content Include="Views\GiaoHang\Layout\LayoutGH.cshtml" />
-    <Content Include="Views\GiaoHang\TrangChu.cshtml" />
-    <Content Include="Views\GiaoHang\DanhSachHD.cshtml" />
-    <Content Include="Views\GiaoHang\TiepNhanDH.cshtml" />
-    <Content Include="Views\GiaoHang\BaoCao.cshtml" />
     <Content Include="Views\KinhDoanh\Test01.cshtml" />
     <Content Include="Views\KinhDoanh\ThemDL.cshtml" />
     <Content Include="Views\KinhDoanh\Delete.cshtml" />
@@ -592,6 +585,13 @@
     <Content Include="Views\KinhDoanh\TuChoiTruyCap.cshtml" />
     <Content Include="Views\TuChoiTruyCap\Layout\Error.cshtml" />
     <Content Include="Views\TuChoiTruyCap\TuChoiTruyCap.cshtml" />
+    <Content Include="Views\GiaoHang\DonHangMoi.cshtml" />
+    <Content Include="Views\GiaoHang\Layout\LayoutGH.cshtml" />
+    <Content Include="Views\GiaoHang\DanhSachGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\DanhSachDonHoan.cshtml" />
+    <Content Include="Views\GiaoHang\BaoCaoLyDoHoanDon.cshtml" />
+    <Content Include="Views\GiaoHang\BaoCaoPhongGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\DanhSachShipper.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
