--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -134,6 +134,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BienBangKiemKesController.cs" />
     <Compile Include="Controllers\DaiLiesController.cs" />
     <Compile Include="Controllers\DonHangsController.cs" />
     <Compile Include="Controllers\GiaoHangController.cs" />
@@ -143,7 +144,6 @@
     <Compile Include="Controllers\KinhDoanhController.cs" />
     <Compile Include="Controllers\LoginDLController.cs" />
     <Compile Include="Controllers\LoginUserController.cs" />
-    <Compile Include="Controllers\PhieuNhapXuatsController.cs" />
     <Compile Include="Controllers\PhongKhoController.cs" />
     <Compile Include="Controllers\QTVController.cs" />
     <Compile Include="Controllers\TuChoiTruyCapController.cs" />
@@ -595,6 +595,11 @@
     <Content Include="Views\PhongKho\ChiTietDonHang.cshtml" />
     <Content Include="Views\PhongKho\DetailsPXK.cshtml" />
     <Content Include="Views\PhongKho\DeletePNX.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Create.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Delete.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Details.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Edit.cshtml" />
+    <Content Include="Views\BienBangKiemKes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
