update_ modal P_KDoanh: 10/03/2023

--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -290,6 +290,7 @@
     <Content Include="Content\Img\account.png" />
     <Content Include="Content\Img\DiemKhang.jpg" />
     <Content Include="Content\Img\KhoHang\bg_createStorage.jpg" />
+    <Content Include="Content\js\chart.js" />
     <Content Include="Data\Images\7up.jpg" />
     <Content Include="Data\Images\coca.png" />
     <Content Include="Data\Images\cocalight.jpg" />
