--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -291,6 +291,8 @@
     <Content Include="Content\Img\DiemKhang.jpg" />
     <Content Include="Content\Img\KhoHang\bg_createStorage.jpg" />
     <Content Include="Content\js\chart.js" />
+    <Content Include="Content\js\tableToExcel.js" />
+    <Content Include="Content\Test01\UploadAnh.css" />
     <Content Include="Data\Images\7up.jpg" />
     <Content Include="Data\Images\coca.png" />
     <Content Include="Data\Images\cocalight.jpg" />
