--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -280,6 +280,7 @@
     <Content Include="Content\fonts\font-awesome-4.7.0\css\font-awesome.min.css" />
     <Content Include="Content\fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\font-awesome-4.7.0\HELP-US-OUT.txt" />
+    <Content Include="Content\formcon.css" />
     <Content Include="Content\images\backgroungteam.png" />
     <Content Include="Content\images\customerApp.png" />
     <Content Include="Content\images\fg-img.png" />
@@ -316,6 +317,7 @@
     <Content Include="Content\js\plugins\select2.min.js" />
     <Content Include="Content\js\plugins\sweetalert.min.js" />
     <Content Include="Content\js\popper.min.js" />
+    <Content Include="Content\ketoan.css" />
     <Content Include="Content\QLHoadon.css" />
     <Content Include="Content\soft-ui-dashboard.css" />
     <Content Include="Content\style01.css" />
@@ -472,12 +474,10 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Views\KeToan\ChinhsuaHD.cshtml" />
     <Content Include="Views\KeToan\ChinhsuCN.cshtml" />
     <Content Include="Views\KeToan\CongnoDL.cshtml" />
     <Content Include="Views\KeToan\Doanhthu.cshtml" />
     <Content Include="Views\KeToan\DSDaiLy.cshtml" />
-    <Content Include="Views\KeToan\Layout\ketoan.js" />
     <Content Include="Views\KeToan\Layout\_LayoutPageKeToan.cshtml" />
     <Content Include="Views\KeToan\QLCongno.cshtml" />
     <Content Include="Views\KeToan\QLDonHang.cshtml" />
@@ -593,6 +593,7 @@
     <Content Include="Views\KeToan\QLDonThanhToan.cshtml" />
     <Content Include="Views\KeToan\DSCongnoDL.cshtml" />
     <Content Include="Views\KeToan\Thongbao.cshtml" />
+    <Content Include="Views\KeToan\ChinhsuaHD.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
