--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -174,13 +174,13 @@
     <Compile Include="Models\DaiLy.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\DanhSachGiaoHang.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\DoanhSo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DonHang.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DonHangGiao.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\HoaDon.cs">
@@ -210,10 +210,16 @@
     <Compile Include="Models\NhanVien.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\NhanVienGH.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\PhieuCongNo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PhieuNhapXuat.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PhuongTienGH.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SanPham.cs">
@@ -290,6 +296,10 @@
     <Content Include="Content\Img\account.png" />
     <Content Include="Content\Img\DiemKhang.jpg" />
     <Content Include="Content\Img\KhoHang\bg_createStorage.jpg" />
+    <Content Include="Content\Img\logictic\fail.png" />
+    <Content Include="Content\Img\logictic\fast-delivery.png" />
+    <Content Include="Content\Img\logictic\fulfillment.png" />
+    <Content Include="Content\Img\logictic\shipped.png" />
     <Content Include="Data\Images\7up.jpg" />
     <Content Include="Data\Images\coca.png" />
     <Content Include="Data\Images\cocalight.jpg" />
@@ -605,13 +615,25 @@
     <Content Include="Views\BienBangKiemKes\Index.cshtml" />
     <Content Include="Views\GiaoHang\DonHangMoi.cshtml" />
     <Content Include="Views\GiaoHang\Layout\LayoutGH.cshtml" />
-    <Content Include="Views\GiaoHang\DanhSachGiaoHang.cshtml" />
     <Content Include="Views\GiaoHang\DanhSachDonHoan.cshtml" />
     <Content Include="Views\GiaoHang\BaoCaoLyDoHoanDon.cshtml" />
     <Content Include="Views\GiaoHang\BaoCaoPhongGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\DanhSachPhuongTienGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\DonGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\XetDuyetDonGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\ChiTietDonGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\ThemPhuongTienGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\ChinhSuaPhuongTienGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\XoaPhuongTienGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\DonDangGiao.cshtml" />
+    <Content Include="Views\GiaoHang\DonDaGiao.cshtml" />
+    <Content Include="Views\GiaoHang\DonHangHoan.cshtml" />
     <Content Include="Views\GiaoHang\DanhSachShipper.cshtml" />
-    <Content Include="Views\GiaoHang\ChinhsuaShipper.cshtml" />
     <Content Include="Views\GiaoHang\ThemShipper.cshtml" />
+    <Content Include="Views\GiaoHang\ChinhsuaShipper.cshtml" />
+    <Content Include="Views\GiaoHang\XoaShipper.cshtml" />
+    <Content Include="Views\GiaoHang\InPhieuXuatKho.cshtml" />
+    <Content Include="Views\GiaoHang\CapNhatTrangThaiDonHang.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
