--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -221,6 +221,9 @@
     <Compile Include="Models\PhuongTienGH.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\pr_SapxepDonHang_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\SanPham.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -600,6 +603,8 @@
     <Content Include="Views\KeToan\CongnoDL.cshtml" />
     <Content Include="Views\PhongKho\DetailsPXK.cshtml" />
     <Content Include="Views\KeToan\QLDonDaGiao.cshtml" />
+    <Content Include="Views\KeToan\QLDonCho.cshtml" />
+    <Content Include="Views\KeToan\ThongKe.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
