--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -159,6 +159,9 @@
     <Compile Include="Models\ChiTietBienBang.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChiTietChuyenGiao.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ChiTietDonHang.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -169,6 +172,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ChucVu.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ChuyenGiao.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DaiLy.cs">
@@ -296,10 +302,12 @@
     <Content Include="Content\Img\account.png" />
     <Content Include="Content\Img\DiemKhang.jpg" />
     <Content Include="Content\Img\KhoHang\bg_createStorage.jpg" />
+    <Content Include="Content\Img\logictic\delivery-truck.png" />
     <Content Include="Content\Img\logictic\fail.png" />
     <Content Include="Content\Img\logictic\fast-delivery.png" />
     <Content Include="Content\Img\logictic\fulfillment.png" />
     <Content Include="Content\Img\logictic\shipped.png" />
+    <Content Include="Content\js\GHthemdonhang.js" />
     <Content Include="Data\Images\7up.jpg" />
     <Content Include="Data\Images\coca.png" />
     <Content Include="Data\Images\cocalight.jpg" />
@@ -634,6 +642,14 @@
     <Content Include="Views\GiaoHang\XoaShipper.cshtml" />
     <Content Include="Views\GiaoHang\InPhieuXuatKho.cshtml" />
     <Content Include="Views\GiaoHang\CapNhatTrangThaiDonHang.cshtml" />
+    <Content Include="Views\GiaoHang\DanhSachCacChuyenGiao.cshtml" />
+    <Content Include="Views\GiaoHang\ChiTietChuyenGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\ThemChuyenGiaoHang.cshtml" />
+    <Content Include="Views\GiaoHang\XepDon.cshtml" />
+    <Content Include="Views\GiaoHang\ThemDonHangVaoChuyenGiao.cshtml" />
+    <Content Include="Views\GiaoHang\InHoaDon.cshtml" />
+    <Content Include="Views\GiaoHang\HuyChuyenGiao.cshtml" />
+    <Content Include="Views\GiaoHang\ChinhSuaChuyenGiao.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
