--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -182,9 +182,6 @@
     <Compile Include="Models\DonHangGiao.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\HoaDon.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Kho.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -602,6 +599,7 @@
     <Content Include="Views\PhongKho\DetailsPXK.cshtml" />
     <Content Include="Views\PhongKho\DeletePNX.cshtml" />
     <Content Include="Views\PhongKho\DSDonHang.cshtml" />
+    <Content Include="Views\PhongKho\PhanPhoiSanPham.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
