--- a/Test02/Web.config
+++ b/Test02/Web.config
@@ -83,7 +83,8 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-<add name="QuanLyDLEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=26.239.41.6;initial catalog=QuanLyDL;persist security info=True;user id=user02;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+<add name="QuanLyDLEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+  workstation id=QuanLyDL.mssql.somee.com;packet size=4096;user id=tannha12345663_SQLLogin_1;pwd=z1difz4nj8;data source=QuanLyDL.mssql.somee.com;persist security info=False;initial catalog=QuanLyDL&quot;" providerName="System.Data.EntityClient" />
   
   
   
