--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -222,6 +222,9 @@
     <Compile Include="Models\PhuongTienGH.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\pr_SapxepDonHang_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\SanPham.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
