--- a/Test02/Web.config
+++ b/Test02/Web.config
@@ -26,6 +26,7 @@
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime />
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
+    <globalization fileEncoding="utf-8" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -83,10 +84,11 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-<add name="QuanLyDLEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;
-  workstation id=QuanLyDL.mssql.somee.com;packet size=4096;user id=tannha12345663_SQLLogin_1;pwd=z1difz4nj8;data source=QuanLyDL.mssql.somee.com;persist security info=False;initial catalog=QuanLyDL&quot;" providerName="System.Data.EntityClient" />
-  
-  
+
+
+    
+    
+  <add name="QuanLyDLEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuanLyDL;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   
   </connectionStrings>
 </configuration>
