--- a/Test02/Web.config
+++ b/Test02/Web.config
@@ -22,6 +22,13 @@
         <httpRuntime targetFramework="4.6" />
       </system.Web>
   -->
+  <system.net>
+    <mailSettings>
+      <smtp>
+        <network host="smtp.gmail.com" port="587" userName="nhaphanphoi.nkqh@gmail.com" password="zkmepferuhsohxik" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime />
@@ -93,9 +100,9 @@
   <!--<add name="QuanLyDLEntities2" 
        connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuanLyDL;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
        providerName="System.Data.EntityClient" />-->
-    <add name="QuanLyDLEntities2" 
+    <!--<add name="QuanLyDLEntities2" 
        connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;workstation id=QuanLyDL.mssql.somee.com;packet size=4096;user id=tannha12345663_SQLLogin_1;pwd=z1difz4nj8;data source=QuanLyDL.mssql.somee.com;persist security info=False;initial catalog=QuanLyDL&quot;" 
-       providerName="System.Data.EntityClient" />
+       providerName="System.Data.EntityClient" />-->
     
   </connectionStrings>
 </configuration>
