--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -687,6 +687,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Img\SanPham\" />
+    <Folder Include="Content\SelectDropdown\" />
     <Folder Include="Data\ImagesDL\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Test01\Layout\" />
