--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -227,9 +227,6 @@
     <Compile Include="Models\SanPham.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\sp_CNDenHan_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\sp_CongNoDenHan_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -243,6 +240,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\Data\EntityState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-5.0.2-dist\css\bootstrap-grid.css" />
