--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -222,9 +222,6 @@
     <Compile Include="Models\PhuongTienGH.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\pr_SapxepDonHang_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\SanPham.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -654,6 +651,7 @@
     <Content Include="Views\KhachHang\CongNo.cshtml" />
     <Content Include="Views\KhachHang\LienHe.cshtml" />
     <Content Include="Views\PhongKho\ChiTietDonHang.cshtml" />
+    <Content Include="Views\QTV\HomePage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\KeToan\ChitietCN.cshtml" />
